123_001 - R1601_0029: Solucionada la navegación a la pantalla Auditoría.